[frontend]: add about page and implement welcome page

--- a/frontend/src/app/pages/menu/menu.component.html
+++ b/frontend/src/app/pages/menu/menu.component.html
@@ -16,13 +16,13 @@
             <a routerLink="/menu/welcome">Home</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a>Users</a>
+            <a >Users</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a>Add new user</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a>About</a>
+            <a routerLink="/menu/about">About</a>
           </li>
         </ul>
       </li>
