[frontend]: add users page

--- a/frontend/src/app/pages/menu/menu.component.html
+++ b/frontend/src/app/pages/menu/menu.component.html
@@ -16,10 +16,7 @@
             <a routerLink="/menu/welcome">Home</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a >Users</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a>Add new user</a>
+            <a routerLink="/menu/users">Users</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/menu/about">About</a>
