--- a/frontend/src/app/pages/menu/menu.component.html
+++ b/frontend/src/app/pages/menu/menu.component.html
@@ -26,7 +26,7 @@
       <li nz-submenu nzOpen nzTitle="Account settings" nzIcon="tool">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a>Change password</a>
+            <a routerLink="/menu/change-password">Change password</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a>Logout</a>
